[signin] Update Profile/BrowserState info on signin events

The SigninProfileAttributesUpdater was not registered as an observer for
the SigninManager, and the profile info was not updated correctly.

This CL adds the missing registration call as well as unittests.

Bug: 910506
Change-Id: I59ce42bf6a51afa3371ed97cae6a4d9789be3f67
Reviewed-on: https://chromium-review.googlesource.com/c/1358499
Commit-Queue: David Roger <droger@chromium.org>
Reviewed-by: Mihai Sardarescu <msarda@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615076}
Former-commit-id: 1281aa2b06be40e78271c1815e98d645e6a16a74